--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ return false;
 <h2>Contact</h2>
 <!--<p class="c">お問い合わせは以下までお願い致します。</p>-->
 <!--<span style="color: red;">※お問い合わせは以下までお願い致します。</span></p>-->
-<a class="no-underline underline-hover" href="form.php#contact">
+<a class="no-underline underline-hover" href="http://eliya.x0.com/form.php#contact">
 <center><span class="look"><i class="far fa-envelope"></i>　お問い合わせフォームへ移動</span></center>
 </a>
 
