--- a/index.html
+++ b/index.html
@@ -79,50 +79,46 @@ return false;
 <h3>コネポケ 開発への物語</h3>
 
 <p>
-数年前に引越しをした時の出来事…<br>
+数年前に引っ越しをした時の出来事…<br>
 その頃、私は比較的広い家に住んでいました。<br>
-引越し先は今より狭くなるので、全ての家具を持ち込むことは無理だと思い、
-使っていた家具の処分方法に悩み始めました。<br>
+引っ越し先は今より狭くなるので、全ての家具を持ち込むことは無理だと思い、使っていた家具の処分方法に悩み始めました。<br>
 <br>
 「頑張って貯金して買った洋服」「思い出のある机」「まだまだ新しい洗濯機」…<br>
-まずは少しでもお金になればと思い、出張査定をしてくれるリサイクルショップにお願いをすることにしました。<br>
-査定の当日の事、業者から聞かされた査定の内容は私の想像を遥かに下回るものでした。<br>
-想定外はそれだけに終わらず、大きな机は需要がないから「ただ」でも引き取れないと言われました。<br>
-私にとっては、仕事を頑張ってやっと買うことができた大切な物がこんな評価なのかと大変ショックを受けました。<br>
+まず初めは、少しでもお金になればと思い、出張査定をしてくれるリサイクルショップにお願いをすることにしました。<br>
+査定当日の事、業者から聞かされた査定結果は私の想像を遥かに下回るものでした。<br>
+想定外はそれだけに終わらず、大きな机は需要がないから「タダ」でも引き取れないと言われました。<br>
+私にとっては仕事を頑張って、やっとの思いで買うことができた大切な物が、こんな評価なのかと大変ショックを受けました。<br>
 <br>
-次は、大手オークションや、フリマアプリなどで売る事を考えました。<br>
+次は大手オークションや、フリマアプリなどで売る事を考えました。<br>
 金額の設定、商品の紹介文、発送方法、寸法などなど<br>
-料金が発生することだから細かいところまでしっかりと気をつけないと、
-トラブルになるってよく聞くしなぁ…何だか面倒...<br>
-それに売れるまでに時間もかかるし、引越しまでにそんな時間の余裕がない…<br>
+料金が発生することだから細かいところまでしっかりと気をつけなければトラブルになるってよく聞くしなぁ…何だか面倒。<br>
+それに売れるまでに時間もかかるし、引っ越しまでにそんな時間の余裕がない…<br>
 結果的に売れなかったら、また降り出しに戻ってしまう…<br>
-サイトなどで売ることは止めることにしました。<br>
-
+考えた結果、サイトなどで売ることは止めることにしました。<br>
+<br>
 次に捨てて処分することへの選択を考えました。<br>
-不用品回収業者はお金がかかるし
-そもそも捨てることへの決断がどうしてもつかない。<br>
-もったいない症が私の悪いところﾄﾎﾄﾎ<br>
+不用品回収業者はお金がかかるし、そもそも捨てることへの決断がどうしてもつかない。<br>
+もったいない症が私の悪いところ ﾄﾎﾎ<br>
 <br>
-そう悩んだ時にスーと神様が降りてきたのです。<br>
-<br>
-『売ったところで小額だし、捨てるのももったいない。<br>
+そう悩んだ時にふと思ったのです。<br>
+『売ったところで少額だし、捨てるのももったいない。<br>
 だったら誰かが使ってくれるのが1番いい。<br>
-きっと誰かを幸せにできる。』<br>
+きっと欲しい人や、探している人もいて喜んでもらえるはず。』<br>
 <br>
-そこで友達に声をかけたり、SNSのタイムラインに投稿するとすぐに反響があり<br>
-「タダでくれるんですか？」「ぜひ使いたい」「机を欲しくて探していたから引き取りたい」「大切に使わせていただきます」<br>
+そこで友達に声をかけたり、SNSに投稿したりするとすぐに反響があり<br>
+「タダでくれるのですか？」「ぜひ使いたい」「机を欲しくて探していたから引き取りたい」「いただけるなら大切に使います」<br>
 などなど、たくさんのご連絡をいただきました。<br>
 <br>
 私が長年一緒に暮らし大切にしてきた「もの」は、大切にしてくれる次の方へ受け継がれていきました。<br>
-
-引越しが終わった時には、「もったいないことをした」「売ればよかった」などは微塵も思わず、
+<br>
+引っ越しが終わった時には、「もったいないことをした」「売ればよかった」などの後悔は一切なく、
 晴れ晴れとした幸せいっぱいの気持ちでした。<br>
-どうしてこんな事に気づく事が出来なかったのか、必死になって売ろうとしていたのか、<br>
+どうしてこんな事に気づく事が出来なかったのか、必死になって売ろうとしていたのか、
 後になって自分が恥ずかくなりました。<br>
 <br>
 その後も引き取ってくださった方から、感謝の言葉を言われます。<br>
 また使用している写真を送っていただいた事があり、<br>
-「私の使っていたものが今はこうして使われているんだぁ」とすごく素敵に思えました。<br>
+「私の使っていたものが今はこうして使われているんだな」と凄く素敵に思えました。<br>
 <br>
 そんな時に、私のように処分に悩んだ人や今も悩んでいる人は世の中にたくさんいるだろうと思いました。<br>
 逆の立場で、欲しいけど買えなかったり、探していたりしている人もたくさんいると思いました。<br>
@@ -131,12 +127,15 @@ return false;
 物を簡単に捨てないことで「ゴミを無くす」ことへも繋がり、みんなが幸せになれると思います。<br>
 <br>
 「捨てることより」も「売ることより」も、これからは違う選択肢を考えてほしいです。<br>
-そうすることで本当に大切なものは何か、「人の幸せ」「地球環境問題」「資源問題」などさまざまものが見えてくると思います。<br>
+そうすることで本当に大切なものは何か、「人の幸せ」「地球環境問題」「資源問題」などさまざまなものが見えてくると
+思います。<br>
 地球と人が笑顔になるには一人ひとりの小さな行動が大切だと思います。<br>
 <br>
-子供の頃に誰もが夢を見て憧れたドラえもんのポケットのように、<br>
+子供の頃に誰もが夢を見て憧れたドラえもんのポケットのように、
 色々なものを無限に入れることのできるポケットを通じて、「人と人」「物と物」が繋がって欲しい。<br>
 少しでもそのお手伝いができればと思いコネポケを開発しました。<br>
+<br>
+どうか皆さまにコネポケを通じて幸福と平和が届きますように。<br>
 <br>
 <strong class="color1"><font size="4">どうか皆さまにコネポケを通じて幸福と平和が届きますように。</font></strong></p>
 
@@ -186,14 +185,14 @@ return false;
 <h2>コネポケ Service</h2>
 
 <div class="list">
-<span class="look"><i class="fas fa-mobile-alt fa-fw"></i> 下記をクリックしてアプリをダウンロードいただけます</span><br>
+<span class="look"><i class="fas fa-mobile-alt fa-fw"></i> 下記クリックでアプリがダウンロードいただけます</span><br>
 <a href="https://play.google.com/store/apps/details?id=com.conepoke" target="_blank"><img src="images/google-play-badge.png" alt="GooglePlay" vspace="10"></a>
 <a href="https://apps.apple.com/us/app/conepoke/id1458681797" target="_blank"><img src="images/App-Store-jp.png" alt="AppStore" vspace="10"></a>
 </div>
 
 <div class="list1">
 <span class="look"><i class="fas fa-desktop fa-fw"></i> webサイトは下記をクリックしてください</span><br>
-<a href="https://www.conepoke.com/" target="_blank"><img src="images/weblink1.png" alt="GooglePlay"></a>
+<a href="https://www.conepoke.com/" target="_blank"><img src="images/weblink1.png" alt="コネポケwebサイト" vspace="10"></a>
 </div>
 
 <!--<div class="list">
@@ -210,7 +209,7 @@ return false;
 <h2>Contact</h2>
 <!--<p class="c">お問い合わせは以下までお願い致します。</p>-->
 <!--<span style="color: red;">※お問い合わせは以下までお願い致します。</span></p>-->
-<a class="no-underline underline-hover" href="http://eliya.x0.com/form.php#contact">
+<a class="no-underline underline-hover" href="form.php#contact">
 <center><span class="look"><i class="far fa-envelope"></i>　お問い合わせフォームへ移動</span></center>
 </a>
 
