--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@ return false;
 <li><a href="#new">News</a></li>
 <li><a href="#company">Company</a></li>
 <li><a href="#service">Service</a></li>
-<li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
 </header>
@@ -103,7 +102,7 @@ return false;
 そう悩んだ時にふと思ったのです。<br>
 『売ったところで少額だし、捨てるのももったいない。<br>
 だったら誰かが使ってくれるのが1番いい。<br>
-きっと欲しい人や、探している人もいて喜んでもらえるはず。』<br>
+きっと欲しい人や探している人もいて喜んでもらえるはず。』<br>
 <br>
 そこで友達に声をかけたり、SNSに投稿したりするとすぐに反響があり<br>
 「タダでくれるのですか？」「ぜひ使いたい」「机を欲しくて探していたから引き取りたい」「いただけるなら大切に使います」<br>
@@ -123,7 +122,7 @@ return false;
 そんな時に、私のように処分に悩んだ人や今も悩んでいる人は世の中にたくさんいるだろうと思いました。<br>
 逆の立場で、欲しいけど買えなかったり、探していたりしている人もたくさんいると思いました。<br>
 <br>
-そこで、「もの」が無料であげたり、もらったりできる場所があれば、きっと便利だろうと考えました。<br>
+そこで、「もの」を無料で譲ったり、もらったりできる場所があれば、きっと便利だろうと考えました。<br>
 物を簡単に捨てないことで「ゴミを無くす」ことへも繋がり、みんなが幸せになれると思います。<br>
 <br>
 「捨てることより」も「売ることより」も、これからは違う選択肢を考えてほしいです。<br>
@@ -134,8 +133,6 @@ return false;
 子供の頃に誰もが夢を見て憧れたドラえもんのポケットのように、
 色々なものを無限に入れることのできるポケットを通じて、「人と人」「物と物」が繋がって欲しい。<br>
 少しでもそのお手伝いができればと思いコネポケを開発しました。<br>
-<br>
-どうか皆さまにコネポケを通じて幸福と平和が届きますように。<br>
 <br>
 <strong class="color1"><font size="4">どうか皆さまにコネポケを通じて幸福と平和が届きますように。</font></strong></p>
 
@@ -206,12 +203,12 @@ return false;
 
 <section id="contact">
 
-<h2>Contact</h2>
+<!--<h2>Contact</h2>-->
 <!--<p class="c">お問い合わせは以下までお願い致します。</p>-->
 <!--<span style="color: red;">※お問い合わせは以下までお願い致します。</span></p>-->
-<a class="no-underline underline-hover" href="http://eliya.x0.com/form.php#contact">
+<!--<a class="no-underline underline-hover" href="http://eliya.x0.com/form.php#contact">
 <center><span class="look"><i class="far fa-envelope"></i>　お問い合わせフォームへ移動</span></center>
-</a>
+</a>-->
 
 <!--<p class="c"><span class="big1">03-0000-0000</span><br>
 定休日：毎週土日<br>
