--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ return false;
 <li><a href="#new">News</a></li>
 <li><a href="#company">Company</a></li>
 <li><a href="#service">Service</a></li>
+ <li><a href="form.php#contact">Contact</a></li>
 </ul>
 </nav>
 </header>
@@ -78,56 +79,56 @@ return false;
 <h3>コネポケ 開発への物語</h3>
 
 <p>
-数年前に引っ越しをした時の出来事…<br>
+数年前に引越しをした時の出来事…<br>
 その頃、私は比較的広い家に住んでいました。<br>
-引っ越し先は今より狭くなるので、全ての家具を持ち込むことは無理だと思い、使っていた家具の処分方法に悩み始めました。<br>
+引越し先は今より狭くなるので、全ての家具を持ち込むことは無理だと思い、
+使っていた家具の処分方法に悩み始めました。<br>
 <br>
 「頑張って貯金して買った洋服」「思い出のある机」「まだまだ新しい洗濯機」…<br>
 まず初めは、少しでもお金になればと思い、出張査定をしてくれるリサイクルショップにお願いをすることにしました。<br>
-査定当日の事、業者から聞かされた査定結果は私の想像を遥かに下回るものでした。<br>
+査定の当日の事、業者から聞かされた査定の内容は私の想像を遥かに下回るものでした。<br>
 想定外はそれだけに終わらず、大きな机は需要がないから「タダ」でも引き取れないと言われました。<br>
-私にとっては仕事を頑張って、やっとの思いで買うことができた大切な物が、こんな評価なのかと大変ショックを受けました。<br>
+私にとっては仕事を頑張ってやっと買うことができた大切な物が、こんな評価なのかと大変ショックを受けました。<br>
 <br>
-次は大手オークションや、フリマアプリなどで売る事を考えました。<br>
+次は、大手オークションやフリマアプリなどで売る事を考えました。<br>
 金額の設定、商品の紹介文、発送方法、寸法などなど<br>
-料金が発生することだから細かいところまでしっかりと気をつけなければトラブルになるってよく聞くしなぁ…何だか面倒。<br>
-それに売れるまでに時間もかかるし、引っ越しまでにそんな時間の余裕がない…<br>
+料金が発生することだから細かいところまでしっかりと気を付けなければトラブルになるってよく聞くしなぁ…何だか面倒。<br>
+それに売れるまでに時間もかかるし、引越しまでにそんな時間の余裕がない…<br>
 結果的に売れなかったら、また降り出しに戻ってしまう…<br>
 考えた結果、サイトなどで売ることは止めることにしました。<br>
 <br>
 次に捨てて処分することへの選択を考えました。<br>
-不用品回収業者はお金がかかるし、そもそも捨てることへの決断がどうしてもつかない。<br>
-もったいない症が私の悪いところ ﾄﾎﾎ<br>
+不用品回収業者はお金がかかるし
+そもそも捨てることへの決断がどうしてもつかない。<br>
+もったいない症が私の悪いところﾄﾎﾎ<br>
 <br>
 そう悩んだ時にふと思ったのです。<br>
-『売ったところで少額だし、捨てるのももったいない。<br>
+『売ったところで小額だし、捨てるのももったいない。<br>
 だったら誰かが使ってくれるのが1番いい。<br>
-きっと欲しい人や探している人もいて喜んでもらえるはず。』<br>
+きっと欲しい人や、探している人もいて喜んでもらえるはず。』<br>
 <br>
 そこで友達に声をかけたり、SNSに投稿したりするとすぐに反響があり<br>
 「タダでくれるのですか？」「ぜひ使いたい」「机を欲しくて探していたから引き取りたい」「いただけるなら大切に使います」<br>
 などなど、たくさんのご連絡をいただきました。<br>
 <br>
 私が長年一緒に暮らし大切にしてきた「もの」は、大切にしてくれる次の方へ受け継がれていきました。<br>
-<br>
-引っ越しが終わった時には、「もったいないことをした」「売ればよかった」などの後悔は一切なく、
+
+引越しが終わった時には、「もったいないことをした」「売ればよかった」などの後悔は一切なく、
 晴れ晴れとした幸せいっぱいの気持ちでした。<br>
-どうしてこんな事に気づく事が出来なかったのか、必死になって売ろうとしていたのか、
+どうしてこんな事に気づく事が出来なかったのか、必死になって売ろうとしていたのか、<br>
 後になって自分が恥ずかくなりました。<br>
 <br>
 その後も引き取ってくださった方から、感謝の言葉を言われます。<br>
 また使用している写真を送っていただいた事があり、<br>
-「私の使っていたものが今はこうして使われているんだな」と凄く素敵に思えました。<br>
+「私の使っていたものが今はこうして使われているんだぁ」とすごく素敵に思えました。<br>
 <br>
-そんな時に、私のように処分に悩んだ人や今も悩んでいる人は世の中にたくさんいるだろうと思いました。<br>
-逆の立場で、欲しいけど買えなかったり、探していたりしている人もたくさんいると思いました。<br>
+それ以降、私のように処分に悩んだ人や今も悩んでいる人は世の中にたくさんいるのではないか、と思うようになりました。<br>
+逆に、欲しいけど買えなかったり、探している人もたくさんいると思いました。<br>
+そこで、「もの」を無料で譲ったり貰ったりできる場所があればきっと便利だろうと考えました。<br>
 <br>
-そこで、「もの」を無料で譲ったり、もらったりできる場所があれば、きっと便利だろうと考えました。<br>
 物を簡単に捨てないことで「ゴミを無くす」ことへも繋がり、みんなが幸せになれると思います。<br>
-<br>
 「捨てることより」も「売ることより」も、これからは違う選択肢を考えてほしいです。<br>
-そうすることで本当に大切なものは何か、「人の幸せ」「地球環境問題」「資源問題」などさまざまなものが見えてくると
-思います。<br>
+そうすることで本当に大切なものは何か、「人の幸せ」「地球環境問題」「資源問題」など様々なものが見えてくると思います。<br>
 地球と人が笑顔になるには一人ひとりの小さな行動が大切だと思います。<br>
 <br>
 子供の頃に誰もが夢を見て憧れたドラえもんのポケットのように、
@@ -135,7 +136,6 @@ return false;
 少しでもそのお手伝いができればと思いコネポケを開発しました。<br>
 <br>
 <strong class="color1"><font size="4">どうか皆さまにコネポケを通じて幸福と平和が届きますように。</font></strong></p>
-
 
 <h3>コネポケの名前の由来</h3>
 <p>コネクトポケットconnect pocketの略です。<br>
@@ -156,7 +156,7 @@ return false;
 </tr>
 <tr>
 <th>連絡先</th>
-<td><a href="#contact">お問い合わせフォーム</a>よりご連絡ください</td>
+<td><a href="form.php#contact">お問い合わせフォーム</a>よりご連絡ください</td>
 </tr>
 <tr>
 <th>代表者</th>
