--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@ return false;
 <h2>コネポケ Service</h2>
 
 <div class="list">
-<span class="look"><i class="fas fa-mobile-alt fa-fw"></i> 下記クリックでアプリがダウンロードいただけます</span><br>
+<!--<span class="look">--><i class="fas fa-mobile-alt fa-fw"></i> アプリのダウンロードはこちら<!--</span>--><br>
 <a href="https://play.google.com/store/apps/details?id=com.conepoke" target="_blank"><img src="images/google-play-badge.png" alt="GooglePlay" vspace="10"></a>
 <a href="https://apps.apple.com/us/app/conepoke/id1458681797" target="_blank"><img src="images/App-Store-jp.png" alt="AppStore" vspace="10"></a>
 </div>
 
 <div class="list1">
-<span class="look"><i class="fas fa-desktop fa-fw"></i> webサイトは下記をクリックしてください</span><br>
+<!--<span class="look">--><i class="fas fa-desktop fa-fw"></i> webサイトは下記をクリックしてください<!--</span>--><br>
 <a href="https://www.conepoke.com/" target="_blank"><img src="images/weblink1.png" alt="コネポケwebサイト" vspace="10"></a>
 </div>
 
