--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ return false;
 </tr>
 <tr>
 <th>連絡先</th>
-<td><a href="form.php#contact">お問い合わせフォーム</a>よりご連絡ください</td>
+<td><a href="http://eliya.x0.com/form.php#contact">お問い合わせフォーム</a>よりご連絡ください</td>
 </tr>
 <tr>
 <th>代表者</th>
