--- a/finish.html
+++ b/finish.html
@@ -38,7 +38,7 @@ return false;
 <li><a href="index.html#new">News</a></li>
 <li><a href="index.html#company">Company</a></li>
 <li><a href="index.html#service">Service</a></li>
-<li><a href="form.php#contact">Contact</a></li>
+<li><a href="http://eliya.x0.com/form.php#contact">Contact</a></li>
 </ul>
 </nav>
 </header>
